Correct icon spacing

--- a/app/assets/stylesheets/mini-icons.scss
+++ b/app/assets/stylesheets/mini-icons.scss
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 10px;
 }
 .mini-button{
   min-width: 100%;
